# moderator-bot

./: .env.dist  .gitignore  LICENSE  README.md  aiogram-loop.patch  app.py  database.py  load.py  pyproject.toml  requirements.txt
config/: config.py  roles.json
database/: database.py  models.py
filters/: __init__.py  avaible_roles.py  available_roles.py  chat_type_filter.py  filters.py  replay_message.py  reply_message.py
handlers/: __init__.py  event.py
handlers/channels/: __init__.py  channels_handler.py
handlers/errors/: errors_handler.py
handlers/groups/: __init__.py  admin.py  main.py  moderator.py  new_chat_member.py  service.py  simple_admin.py  user.py
handlers/private/: user.py
handlers/users/: user.py
keyboards/default/: __init__.py  menu.py  menus.py
keyboards/inline/: __init__.py  callback_data.py  report.py  report_button.py
states/: report_message.py
systemd/: config.env  telegram-bot-api.service
txt/: link_shorters.txt
utils/: __init__.py  arguments_parser.py  command_parser.py  default_commands.py  notify_start.py  parse_timedelta.py  reload_users.py  telegram_client.py  update_user_data.py  virustotal.py
